[project]
name = "hefftools-cli"
version = "0.1.0"
description = "CLI for the HeffTools.dev APIs"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name="Jeff Henry", email="heffman@gmail.com" }
]

dependencies = [
    "click",
    "requests"
]

[project.scripts]
hefftools = "hefftools_cli:cli"

