[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hefftools-cli"
version = "0.1.0"
description = "CLI for the HeffTools.dev APIs (UUID, password, URL encode/decode, subnet calc, and more)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Jeff Henry" }
]

dependencies = [
  "click>=8",
  "requests>=2"
]

[project.scripts]
hefftools = "hefftools_cli:cli"

[tool.setuptools]
py-modules = ["hefftools_cli"]

